--- a/includes/.env-sample
+++ b/includes/.env-sample
@@ -1,3 +1,7 @@
+[general]
+url =
+full_path =
+
 [database]
 hostname =
 username =
@@ -10,6 +14,7 @@ database =
 api_key =
 
 [bunny_storage]
-bucket =
+zone =
 username =
 password =
+public_url =
