updated dependencies and classes
Signed-off-by: Paige Julianne Sullivan <paige@paigejulianne.com>

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "symfony/http-client": "@stable",
     "google/cloud-billing": "@stable",
     "smarty/smarty": "@stable",
-    "phpmailer/phpmailer": "@stable"
+    "sendgrid/sendgrid": "@stable"
   },
   "config": {
     "allow-plugins": {
