Allowing pestphp/pest-plugin

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
   },
   "config": {
     "allow-plugins": {
-      "php-http/discovery": true
+      "php-http/discovery": true,
+      "pestphp/pest-plugin": true
     }
   }
 }
