adding developer install guide and comments to .env-sample
Signed-off-by: Paige Julianne Sullivan <paige@paigejulianne.com>

--- a/includes/.env-sample
+++ b/includes/.env-sample
@@ -1,20 +1,20 @@
 [general]
-url =
-full_path =
+url =           ; full URL to installation without trailing slash
+full_path =     ; full file path to installation
 
 [database]
-hostname =
-username =
-password =
-database =
+hostname =      ; database hostname
+username =      ; database username
+password =      ; database password
+database =      ; database schema name
 
-[google]
+[google]        ; future use
 
 [bunny]
-api_key =
+api_key =       ; bunny.net account api key
 
 [bunny_storage]
-zone =
-username =
-password =
-public_url =
+zone =          ; bunny.net storage zone name
+username =      ; bunny.net storage zone username
+password =      ; bunny.net storage zone password
+public_url =    ; public URL to bunny.net storage without trailing slash
