--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,69 @@
 {
-  "require": {
-    "paigejulianne/picoorm": "@dev",
-    "toshy/bunnynet-php": "@stable",
-    "geocoder-php/google-maps-provider": "@stable",
-    "symfony/http-client": "@stable",
-    "google/cloud-billing": "@stable",
-    "sendgrid/sendgrid": "@stable",
-    "twig/twig": "@stable",
-    "pestphp/pest": "@stable"
-  },
-  "config": {
-    "allow-plugins": {
-      "php-http/discovery": true,
-      "pestphp/pest-plugin": true
+    "name": "Transgender-Healthcare/core",
+    "type": "project",
+    "license": "GPL-3.0-or-later",
+    "description": "Core project for the Transgender.Healthcare website",
+    "minimum-stability": "stable",
+    "prefer-stable": true,
+    "require": {
+        "php": ">=8.1",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "symfony/flex": "^2"
+    },
+    "flex-require": {
+        "symfony/console": "*",
+        "symfony/dotenv": "*",
+        "symfony/framework-bundle": "*",
+        "symfony/runtime": "*",
+        "symfony/yaml": "*"
+    },
+    "require-dev": {
+    },
+    "config": {
+        "allow-plugins": {
+            "php-http/discovery": true,
+            "symfony/flex": true,
+            "symfony/runtime": true
+        },
+        "sort-packages": true
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "App\\Tests\\": "tests/"
+        }
+    },
+    "replace": {
+        "symfony/polyfill-ctype": "*",
+        "symfony/polyfill-iconv": "*",
+        "symfony/polyfill-php72": "*",
+        "symfony/polyfill-php73": "*",
+        "symfony/polyfill-php74": "*",
+        "symfony/polyfill-php80": "*",
+        "symfony/polyfill-php81": "*"
+    },
+    "scripts": {
+        "auto-scripts": [
+        ],
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ]
+    },
+    "conflict": {
+        "symfony/symfony": "*"
+    },
+    "extra": {
+        "symfony": {
+            "allow-contrib": false,
+            "require": "6.4.*"
+        }
     }
-  }
 }
