--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@
 /composer.lock
 /.idea/
 /includes/.env
+###> symfony/framework-bundle ###
+/.env.local
+/.env.local.php
+/.env.*.local
+/config/secrets/prod/prod.decrypt.private.php
+/public/bundles/
+/var/
+/vendor/
+###< symfony/framework-bundle ###
