--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "pestphp/pest-plugin": true
         },
         "sort-packages": true
     },
