--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,25 @@
         "php": ">=8.1",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.12",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.2",
+        "symfony/apache-pack": "^1.0",
         "symfony/console": "6.4.*",
+        "symfony/debug-bundle": "6.4.*",
         "symfony/dotenv": "6.4.*",
         "symfony/flex": "^2",
+        "symfony/form": "6.4.*",
         "symfony/framework-bundle": "6.4.*",
         "symfony/runtime": "6.4.*",
-        "symfony/yaml": "6.4.*"
-    },
-    "require-dev": {
+        "symfony/security-bundle": "6.4.*",
+        "symfony/sendgrid-mailer": "6.4.*",
+        "symfony/translation": "6.4.*",
+        "symfony/twig-bundle": "6.4.*",
+        "symfony/validator": "6.4.*",
+        "symfony/yaml": "6.4.*",
+        "toshy/bunnynet-php": "^4.2"
     },
     "config": {
         "allow-plugins": {
@@ -63,8 +74,9 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
-            "require": "6.4.*"
+            "allow-contrib": true,
+            "require": "6.4.*",
+            "docker": true
         }
     }
 }
