adding Pest PHP code tester
Signed-off-by: Paige Julianne Sullivan <paige@paigejulianne.com>

--- a/composer.json
+++ b/composer.json
@@ -80,5 +80,8 @@
             "require": "6.4.*",
             "docker": true
         }
+    },
+    "require-dev": {
+        "pestphp/pest": "^2.34"
     }
 }
