--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
-    "name": "laravel/laravel",
+    "name": "genderdirectory/genderdirectory",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
-    "license": "MIT",
+    "description": "Gender Directory core web files.",
+    "license": "GPL-3.0-or-later",
     "require": {
         "php": "^8.1",
         "guzzlehttp/guzzle": "^7.2",
