updating .env.example and composer dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Gender Directory
+APP_NAME="Gender Directory"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -9,7 +9,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=dev.genderdirectory.com
+DB_HOST=genderdirectory.com
 DB_PORT=3306
 DB_DATABASE=gendir_development
 DB_USERNAME=gendir_development
