--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "php": "^8.2",
+        "doctrine/dbal": "^3.5.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
