--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Gender Directory"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:RolNvypcVLVNRKine8JfEGNfWEHZ3B80AJndADegJxg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
