--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ DB_HOST=genderdirectory.com
 DB_PORT=3306
 DB_DATABASE=gendir_development
 DB_USERNAME=gendir_development
-DB_PASSWORD="Y099@4bqu"
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
