--- a/.env.example
+++ b/.env.example
@@ -9,10 +9,10 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=genderdirectory.com
-DB_PORT=3306
-DB_DATABASE=gendir_development
-DB_USERNAME=gendir_development
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
