--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME="Gender Directory"
 APP_ENV=local
 APP_KEY=base64:RolNvypcVLVNRKine8JfEGNfWEHZ3B80AJndADegJxg=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://dev.genderdirectory.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -13,7 +13,7 @@ DB_HOST=genderdirectory.com
 DB_PORT=3306
 DB_DATABASE=gendir_development
 DB_USERNAME=gendir_development
-DB_PASSWORD="Y099@4bqu"
+DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -23,12 +23,12 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
+MAIL_HOST=localhost
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_ADDRESS="noreply@genderdirectory.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
 PUSHER_APP_ID=
